# CamLabel3D

./: .gitattributes  .gitignore  README.md  pyproject.toml  run_camlabel3d_postprocess.py  ui.py
camlabel3d/: __init__.py  __main__.py  app.py  bev_overview_cli.py  postprocess_cli.py  runtime.py  runtime_config.py
camlabel3d/application/: __init__.py  context.py  indexes.py  source_service.py
camlabel3d/core/: __init__.py  bev.py  detector.py  frame_cache.py  frame_provider.py  geometry.py  models.py  postprocess.py  processing.py  source_config.py  tracking.py
camlabel3d/diagnostics/: __init__.py  gpu.py
camlabel3d/io/: __init__.py  csv_store.py
camlabel3d/ui/: __init__.py  bev_canvas.py  bookmark_slider.py  canvas.py  image_utils.py  input_widgets.py  main_window.py  track_batch_dialog.py  worker.py
configs/: dataset_sources.example.json
docs/: ARCHITECTURE.md  CHECKPOINTS.md  INSTALL_CAMLABEL3D.md
packaging/: build_release.ps1  launch_camlabel3d.py  launch_camlabel3d_postprocess.py  launcher_common.py
tests/: test_bev.py  test_bev_overview_cli.py  test_csv_store.py  test_detector_lifecycle.py  test_frame_cache.py  test_frame_provider.py  test_geometry.py  test_gpu_diagnostics.py  test_indexes.py  test_persistence_worker.py  test_postprocess.py  test_postprocess_cli.py  test_postprocess_undo.py  test_preview_scheduling.py  test_preview_worker.py  test_processing.py  test_processing_parallel.py  test_runtime.py  test_runtime_config.py  test_source_config.py  test_tracking.py  test_video_frame_provider.py
workers/WildDet3D/: ckpt_download.sh  cmd.txt  demo.py  (+2 more)
(+14 files in other folders)
