[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "camlabel3d"
dynamic = ["version"]
description = "Desktop annotation and postprocessing tools for camera-only 3D bounding boxes"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[project.gui-scripts]
camlabel3d = "camlabel3d.app:main"

[project.scripts]
camlabel3d-postprocess = "camlabel3d.postprocess_cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.9",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "camlabel3d.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["camlabel3d", "camlabel3d.*"]
exclude = ["tests", "tests.*", "workers", "workers.*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
norecursedirs = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "workers",
]
addopts = [
    "--strict-config",
    "--strict-markers",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["camlabel3d", "tests"]
extend-exclude = [
    "annotation_results",
    "ckpts",
    "workers",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

